refactoring to SardineConnection with new exception handling